--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="top-nav">
         <div class="container nav-flex">
             <div class="nav-left">
-                <a href="#" class="brand">DIU Food</a>
+                <a href="#" class="brand">QuickDine DIU</a>
             </div>
             <div class="nav-center">
                 <input type="text" class="search-input" placeholder="Search hotels...">
